<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".ui.CreateFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcom_textview"
        android:text="@string/welcome"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_textview"
        android:text="@string/sign_up_to_continue"
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/welcom_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_textview"
        android:text="@string/username"
        android:background="@color/white"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_edittext"
        android:hint="@string/enter_your_username"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/username_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_textview"
        android:text="@string/email"
        android:background="@color/white"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_edittext"
        android:hint="@string/enter_your_email"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/email_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_textview"
        android:text="@string/password"
        android:background="@color/white"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_edittext"
        android:hint="@string/enter_your_password"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/password_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/con_password_textview"
        android:text="@string/confirm_password"
        android:background="@color/white"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/con_password_edittext"
        android:hint="@string/enter_your_confirm_password"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/con_password_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_textview"
        android:text="@string/create_account"
        android:background="@color/white"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/con_password_edittext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_textview"
        android:text="@string/log_in"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/create_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>