<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".ui.ResetPasswordFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset_textview"
        android:text="@string/reset_password"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instruction_textview"
        android:text="@string/reset_ins"
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/reset_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/code_textview"
        android:text="@string/reset_code"
        android:background="@color/white"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/instruction_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_code_edittext"
        android:hint="@string/enter_your_number"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/code_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_password_textview"
        android:text="@string/new_password"
        android:background="@color/white"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/reset_code_edittext"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_edittext"
        android:hint="@string/enter_your_password"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/new_password_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password_textview"
        android:text="@string/confirm_password"
        android:background="@color/white"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password_edittext"
        android:hint="@string/enter_your_confirm_password"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_password_textview"
        android:text="@string/change_password"
        android:background="@color/white"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_textview"
        android:text="@string/log_in"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/change_password_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>