<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".ui.ForgotPasswordFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_textview"
        android:text="@string/forgot_password_textview"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instruction_textview"
        android:text="@string/instruction"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/forgot_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_textview"
        android:text="@string/username"
        android:background="@color/white"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/instruction_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_edittext"
        android:hint="@string/enter_your_username"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/username_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/request_textview"
        android:text="@string/send_request"
        android:background="@color/white"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_textview"
        android:text="@string/log_in"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>